Denora Version 1.4.0-SVN
------------------------
Provided by Denora Team <dev@denorastats.org> - 2008
02/27 F Fixed segfault on certain inspircd11 FMODE events         [#485]
02/26 F Fixed inspircd11 +j/+J mode data not written to sql       [ #00]
02/26 F Fixed crash on truncated inspircd11 PUSH message          [#489]
02/17 F Added missing user modes to UltimateIRCd                  [#488]

Denora Version 1.4.0-RC2
------------------------
Provided by Denora Team <dev@denorastats.org> - 2008
01/11 A Detection of Windows Vista and Windows Server 2008        [ #00]
01/10 A Added persistent channel mode support for nefarious       [#466]
01/09 U Updated GeoIP.dat                                         [ #00]
01/28 F Fixed sphtml setting not applying for inactive channels   [#473]
01/27 F Write pid file before loading flatfile db files           [#469]
01/27 F Fixed wrong wrong ping value stored for juped servers     [ #00]
01/27 F Fixed slink array not cleaned in uplink struct on squit   [#461]
01/23 F Fixed memory leak in ss_exclude                           [#480]
01/23 F Fixed kill handling on P10 ircds                          [#479]
01/23 F Fixed incorrect non-western characters in html output     [#462]
01/22 F Handle user mode +h vhost correctly in nefarious          [#463]
01/14 F Fixed sjoin not handling unrealircd nickchar nicks well   [#468]
01/11 F Several inspircd11 fixes                                  [ #00]
01/09 F Fixed p10 account not populated to sql on N message       [#465]
01/09 F Give denorarc more time for the stats process to start    [#469]

Provided by nenolod - 2008
01/09 A State-machine driven UID generator for TS6 ircds          [#431]

Provided by Denora Team <dev@denorastats.org> - 2007
12/02 A New example config file (english)                         [ #00]
11/26 A New HTML template which now validates against 4.01 strict [ #00]
11/18 A Added rejoin lock time support for inspircd               [ #00]