@@ -9,9 +9,13 @@ VERSION_MAJOR="1"
 VERSION_MINOR="4"
 VERSION_PATCH="0"
 VERSION_EXTRA="SVN"
-VERSION_BUILD="174"
+VERSION_BUILD="175"
 
 # $Log$
+#
+# BUILD : 1.4.0.175 (SVN)
+# BUGS  : N/A
+# NOTES : Fixed possible segfault on restart. Fixed MODE not handled correctly in inspircd11. Chan messages from excluded users now counted globally.
 #
 # BUILD : 1.4.0.174 (SVN)
 # BUGS  : 485
